batch4_tests.log
Downloading https://services.gradle.org/distributions/gradle-9.2.1-bin.zip
............10%.............20%.............30%.............40%.............50%.............60%.............70%.............80%.............90%.............100%

Welcome to Gradle 9.2.1!

Here are the highlights of this release:
 - Windows ARM support
 - Improved publishing APIs
 - Better guidance for dependency verification failures

For more details see https://docs.gradle.org/9.2.1/release-notes.html

Starting a Gradle Daemon (subsequent builds will be faster)
Calculating task graph as no cached configuration is available for tasks: :backend:test --tests sgc.integracao.CDU16IntegrationTest --tests sgc.integracao.CDU17IntegrationTest --tests sgc.integracao.CDU18IntegrationTest --tests sgc.integracao.CDU19IntegrationTest --tests sgc.integracao.CDU20IntegrationTest --tests sgc.integracao.CDU21IntegrationTest
> Task :backend:processResources
> Task :backend:processTestResources
> Task :backend:compileJava
> Task :backend:classes

> Task :backend:compileTestJava
/app/backend/src/test/java/sgc/integracao/CDU15IntegrationTest.java:85: error: method mapaPadrao in class MapaFixture cannot be applied to given types;
        Mapa mapa = MapaFixture.mapaPadrao();
                               ^
  required: Subprocesso
  found:    no arguments
  reason: actual and formal argument lists differ in length
/app/backend/src/test/java/sgc/integracao/CDU14IntegrationTest.java:181: error: method mapaPadrao in class MapaFixture cannot be applied to given types;
        Mapa mapaVigente = MapaFixture.mapaPadrao();
                                      ^
  required: Subprocesso
  found:    no arguments
  reason: actual and formal argument lists differ in length
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
2 errors

> Task :backend:compileTestJava FAILED

[Incubating] Problems report is available at: file:///app/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':backend:compileTestJava'.
> Compilation failed; see the compiler output below.
  /app/backend/src/test/java/sgc/integracao/CDU15IntegrationTest.java:85: error: method mapaPadrao in class MapaFixture cannot be applied to given types;
          Mapa mapa = MapaFixture.mapaPadrao();
                                 ^
    required: Subprocesso
    found:    no arguments
    reason: actual and formal argument lists differ in length
  /app/backend/src/test/java/sgc/integracao/CDU14IntegrationTest.java:181: error: method mapaPadrao in class MapaFixture cannot be applied to given types;
          Mapa mapaVigente = MapaFixture.mapaPadrao();
                                        ^
    required: Subprocesso
    found:    no arguments
    reason: actual and formal argument lists differ in length
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use or override a deprecated API.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (powered by Develocity).

BUILD FAILED in 2m 2s
4 actionable tasks: 4 executed
Configuration cache entry stored.
